# wiktrola

./: README.md  pyproject.toml
src/wiktrola/: script.py  wiki.j2  wiktrola.py
