[tool.poetry]
name = "wiktrola"
version = "1.0.2"
description = "Transform any Wikipedia article into an MP3"
authors = ["John Capobianco <ptcapo@gmail.com>"]
packages = [{ include = "wiktrola", from = "src"}]
readme = "README.md"

[tool.poetry.scripts]
wiktrola = 'wiktrola.script:run'

[tool.poetry.dependencies]
python = "^3.8"
rich-click = "^1.3.0"
gTTS = "^2.2.4"
Jinja2 = "^3.1.2"
wikipedia = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
